--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "config": "^3.3.6",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "http-status": "^1.5.0"
+    "http-status": "^1.5.0",
+    "joi": "^17.4.0",
+    "mongodb": "^3.6.8",
+    "mongoose": "^5.12.11",
+    "nanoid": "^3.1.23"
   }
 }
